--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -48,9 +48,8 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
         android:backgroundTint="#FFFFFF"
-        android:ems="20"
         android:enabled="true"
-        android:hint="Enter your team's name (ex. The Cricketeers)"
+        android:hint="Save team (ex. The Cricketeers)"
         android:inputType="textPersonName"
         android:maxLength="10"
         android:scrollHorizontally="true"
@@ -82,9 +81,8 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
         android:backgroundTint="#FFFFFF"
-        android:ems="20"
         android:enabled="true"
-        android:hint="Enter someone else's team name"
+        android:hint="Find a team "
         android:inputType="textPersonName"
         android:maxLength="10"
         android:textColor="#FFFFFF"
