--- a/app/src/main/res/layout/fragment_generate_team.xml
+++ b/app/src/main/res/layout/fragment_generate_team.xml
@@ -310,16 +310,18 @@
 
     <Button
         android:id="@+id/generateBtn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
-        android:layout_marginEnd="108dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginEnd="96dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/rounded_btn"
         android:backgroundTint="@color/teal_700"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:text="Generate!"
         android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
