congratsCardView must be set to invisible on not GONE. otherwise, the confetti only works on the second time it is used

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -387,7 +387,7 @@
         android:id="@+id/congratsGameCardView"
         android:layout_width="300dp"
         android:layout_height="200dp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:cardBackgroundColor="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
