--- a/app/src/main/res/layout/fragment_found_players_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_found_players_recycler_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context="com.example.ahmcricfinale.fragments.share.FoundPlayersRecyclerView">
+    tools:context="com.confuseddevs.ahmcricfinale.fragments.share.FoundPlayersRecyclerView">
 
     <TextView
         android:id="@+id/textView"
